<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_selected_way_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_close" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/select_repay_way_title"
                android:textColor="#222222"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e1e1e1" />

        <LinearLayout
            android:id="@+id/ll_repay_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="14dp">

            <ImageView
                android:id="@+id/img_bankcard"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_click" />

            <TextView
                android:id="@+id/tv_card_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="6dp"
                android:text="银行卡转账"
                android:textColor="#222222"
                android:textSize="@dimen/text_size_16" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#e1e1e1" />


        <LinearLayout
            android:id="@+id/ll_repay_aliPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="14dp">

            <ImageView
                android:id="@+id/img_aliPay"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/shape" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="@string/alipayway"
                    android:textColor="#222222"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_aliPayHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:paddingLeft="6dp"
                    android:text="@string/apliapyhint"
                    android:textColor="#999999"
                    android:textSize="@dimen/text_size_12" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#e1e1e1" />

        <LinearLayout
            android:id="@+id/ll_repay_bindBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="14dp">

            <ImageView
                android:id="@+id/img_bankBind"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:background="@drawable/shape" />

            <TextView
                android:id="@+id/tv_card_bind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="6dp"
                android:text="未绑定银行卡转账"
                android:textColor="#222222"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#e1e1e1" />

        <com.commom.widget.NoDoubleClickTextView
            android:id="@+id/ndc_repay"
            style="@style/primary_button"
            android:layout_height="@dimen/y90"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="22dp"
            android:text="确认支付" />


    </LinearLayout>
</RelativeLayout>